--- a/Development Programs/Microservice Demos/Teluxo Microservices Demos/question-service/question-service/src/main/resources/application.properties
+++ b/Development Programs/Microservice Demos/Teluxo Microservices Demos/question-service/question-service/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+# here we are closing spring banner off
+spring.main.banner-mode=off
+
+# to turn off unwanted message
+logging.level.root=INFO
+
+# changing the port
+server.port=8082
+
+# setting database property for postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/question_db
+spring.datasource.username=postgres
+spring.datasource.password=Jagadish@99
