Upload the project with eureka server and feign client

--- a/Development Programs/Microservice Demos/Teluxo Microservices Demos/question-service/question-service/src/main/resources/application.properties
+++ b/Development Programs/Microservice Demos/Teluxo Microservices Demos/question-service/question-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+spring.application.name = question-service
+
 # here we are closing spring banner off
 spring.main.banner-mode=off
 
@@ -15,3 +17,7 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/question_db
 spring.datasource.username=postgres
 spring.datasource.password=Jagadish@99
+
+# To register the eureka client when eureka server is running on different port
+#eureka.client.serviceUrl.defaultZone= http://localhost:8080/eureka/
+
