--- a/Development Programs/Microservice Demos/Teluxo Microservices Demos/quiz-service/quiz-service/src/main/resources/application.properties
+++ b/Development Programs/Microservice Demos/Teluxo Microservices Demos/quiz-service/quiz-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name = quiz-service
+
 # setting database property for mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/question_db
 spring.datasource.username=root
