--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-D:\Jagdish\Development\Development Programs\Coding Problems\Leetcode-Java\*
+D:/Jagdish/Development/Development Programs/Coding Problems/Leetcode-Java/*
